v6.2.5 to include IRIS support, which had vanished unexpectedly